# Polyphonica

./: .gitignore  CLAUDE.md  Cargo.toml  GUITAR_BUDDY_GUIDE.md  README.md  README_TEST_TOOL.md  REALTIME_ENGINE.md  REALTIME_IMPLEMENTATION_SUMMARY.md  RT_DEMO_GUIDE.md  SAMPLE_CATALOG_DESIGN.md  SAMPLE_SYNTHESIS.md  SAMPLE_SYNTHESIS_PLAN.md  catalog.json  drum_samples_catalog.json  drum_samples_catalog_exported.json  refactor.md  sanity.md  test_genres.json
examples/: realtime_demo.rs
samples/drums/acoustic/kit_01/: manifest.json
src/: lib.rs
src/audio/: accents.rs  mod.rs  stream.rs  synthesis.rs
src/config/: app_config.rs  mod.rs
src/melody/: config.rs  generator.rs  mod.rs  state.rs  theory.rs  timeline.rs  types.rs
src/patterns/: builder.rs  collections.rs  io.rs  library.rs  mod.rs  state.rs  types.rs
src/samples/: catalog.rs  drumkit.rs  library.rs  manager.rs  mod.rs
src/timing/: clock.rs  metronome.rs  mod.rs  patterns.rs  tracker.rs  types.rs
src/visualization/: beat_display.rs  mod.rs
