[package]
name = "polyphonica"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for real-time audio synthesis with polyphonic mixing capabilities"
license = "MIT"
repository = "https://github.com/JackDraak/Polyphonica"
documentation = "https://docs.rs/polyphonica"
keywords = ["audio", "synthesis", "music", "sound", "dsp"]
categories = ["multimedia::audio"]

[lib]
name = "polyphonica"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]