[package]
name = "polyphonica"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Comprehensive Rust library for real-time audio synthesis with polyphonic mixing, sample-based synthesis, and CLI test tools"
license = "MIT"
repository = "https://github.com/JackDraak/Polyphonica"
documentation = "https://docs.rs/polyphonica"
keywords = ["audio", "synthesis", "music", "sound", "dsp", "samples", "polyphonic"]
categories = ["multimedia::audio"]

[lib]
name = "polyphonica"
path = "src/lib.rs"

[[bin]]
name = "polyphonica-test"
path = "src/bin/test_tool.rs"

[[example]]
name = "realtime_demo"
path = "examples/realtime_demo.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rodio = "0.17"
cpal = "0.15"

[dev-dependencies]