[package]
name = "polyphonica"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Comprehensive Rust library for real-time audio synthesis with polyphonic mixing, sample-based synthesis, and CLI test tools"
license = "MIT"
repository = "https://github.com/JackDraak/Polyphonica"
documentation = "https://docs.rs/polyphonica"
keywords = ["audio", "synthesis", "music", "sound", "dsp", "samples", "polyphonic"]
categories = ["multimedia::audio"]

[lib]
name = "polyphonica"
path = "src/lib.rs"

[[bin]]
name = "polyphonica-test"
path = "src/bin/test_tool.rs"

[[example]]
name = "realtime_demo"
path = "examples/realtime_demo.rs"

[[bin]]
name = "rt-demo"
path = "src/bin/rt_demo.rs"

[[bin]]
name = "guitar-buddy"
path = "src/bin/guitar_buddy.rs"

[[bin]]
name = "pattern-timing-test"
path = "src/bin/pattern_timing_test.rs"

[[bin]]
name = "precision-timing-test"
path = "src/bin/precision_timing_test.rs"

[[bin]]
name = "pattern-export"
path = "src/bin/pattern_export.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rodio = "0.17"
cpal = "0.15"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"